--- a/ideas.css
+++ b/ideas.css
@@ -1,15 +1,19 @@
 * {
   font-family: "Open Sans", sans-serif;
   font-style: normal;
+  font-weight: normal;
   
 }
 .first{
   background-color: #fdfdfd;
   display: flex;
   justify-content: center;
+  padding-bottom: 120px;
  }
  .first div#first-content{
   display: flex;
+  width: 750px;
+  justify-content: space-between;
  }
  h1 {
   text-transform: uppercase;
@@ -29,6 +33,7 @@
   width: 350px;
   line-height: 24px;
   color: #585858;
+  margin-bottom: 25px;
  }
  .button-container {
   display: flex;
@@ -38,8 +43,20 @@
   padding: 13px 35px;
   text-transform: uppercase;
   font-size: 24px;
+  background: url("/assets/bg-button.png") no-repeat;
+  color: #fff;
+  background-position: 0 -70px;
+  border: none;
+  cursor: pointer;
+  }
+  button:hover {
+    background-position: 0px 0px;
+    color: #ffb23c;
   }
 .button-container span {
   font-size: 12px;
    color: #585858;
  }
+ /* #image-container {
+  padding-left: 40px;
+ } */
